Update Firefox-ESR, Firefox

--- a/www/firefox-esr/Makefile
+++ b/www/firefox-esr/Makefile
@@ -1,13 +1,13 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox-esr/Makefile 553940 2020-11-03 00:56:26Z jbeich $
+# $FreeBSD: head/www/firefox-esr/Makefile 554716 2020-11-09 12:27:26Z cmt $
 
 PORTNAME=	firefox
-DISTVERSION=	78.4.0
-PORTREVISION=	2
+DISTVERSION=	78.4.1
+PORTREVISION=	1
 PORTEPOCH=	1
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}esr/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}esr-candidates/build2/source
+		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}esr-candidates/build1/source
 PKGNAMESUFFIX=	-esr
 DISTFILES=	${DISTNAME}esr.source${EXTRACT_SUFX}
 
