Update Thunderbird, Firefox, Firefox ESR, node, node12, node14

--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,9 +1,9 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 555547 2020-11-17 11:03:18Z cmt $
+# $FreeBSD: head/mail/thunderbird/Makefile 556308 2020-11-25 23:23:56Z pkubaj $
 
 PORTNAME=	thunderbird
 DISTVERSION=	78.5.0
-PORTREVISION=	3
+PORTREVISION=	5
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
 		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build3/source
@@ -32,6 +32,7 @@ LIB_DEPENDS=	libjson-c.so:devel/json-c \
 SSP_UNSAFE=	yes
 USE_GECKO=	gecko
 USE_MOZILLA=	-sqlite
+CFLAGS_powerpc64le=	-DSQLITE_BYTEORDER=1234
 
 USES=		tar:xz
 
