--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,9 +1,9 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox/Makefile 555015 2020-11-13 11:52:06Z jbeich $
+# $FreeBSD: head/www/firefox/Makefile 556308 2020-11-25 23:23:56Z pkubaj $
 
 PORTNAME=	firefox
 DISTVERSION=	83.0
-PORTREVISION=	3
+PORTREVISION=	5
 PORTEPOCH=	2
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
@@ -31,6 +31,7 @@ BUILD_DEPENDS=	nspr>=4.26:devel/nspr \
 USE_GECKO=	gecko
 CONFLICTS_INSTALL=	firefox-esr
 USE_MOZILLA=	-sqlite
+CFLAGS_powerpc64le=	-DSQLITE_BYTEORDER=1234
 
 USES=		tar:xz
 
