--- a/www/node14/Makefile
+++ b/www/node14/Makefile
@@ -1,9 +1,9 @@
-# $FreeBSD: head/www/node14/Makefile 554132 2020-11-05 13:57:14Z pkubaj $
+# $FreeBSD: head/www/node14/Makefile 556021 2020-11-21 22:28:48Z bhughes $
 
 PORTNAME=	node
 DISTVERSIONPREFIX=	v
-DISTVERSION=	14.15.0
-PORTREVISION=	3
+DISTVERSION=	14.15.1
+PORTREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	http://nodejs.org/dist/v${DISTVERSION}/
 PKGNAMESUFFIX=	14
