--- a/x11-drivers/xf86-input-vmmouse/Makefile
+++ b/x11-drivers/xf86-input-vmmouse/Makefile
@@ -7,7 +7,7 @@ PORTREVISION=	5
 CATEGORIES=	x11-drivers
 
 MAINTAINER=	x11@FreeBSD.org
-COMMENT=	X.Org vmmouse input driver
+COMMENT=	X.Org vmmouse input driver (patched)
 
 LIB_DEPENDS=	libhal.so:sysutils/hal
 
