--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,13 +1,13 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox/Makefile 558100 2020-12-14 17:56:12Z jbeich $
+# $FreeBSD: head/www/firefox/Makefile 558865 2020-12-21 22:45:23Z cmt $
 
 PORTNAME=	firefox
-DISTVERSION=	84.0
-PORTREVISION=	3
+DISTVERSION=	84.0.1
+PORTREVISION=	1
 PORTEPOCH=	2
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build3/source
+		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
 DISTFILES=	${DISTNAME}.source${EXTRACT_SUFX}
 
 MAINTAINER=	gecko@FreeBSD.org
