--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,11 +1,12 @@
 # Created by: Maxim Sobolev <sobomax@FreeBSD.org>
-# $FreeBSD: head/security/nss/Makefile 557769 2020-12-12 00:42:04Z jbeich $
+# $FreeBSD: head/security/nss/Makefile 559326 2020-12-27 00:37:20Z jbeich $
 
 PORTNAME=	nss
-PORTVERSION=	3.60
+PORTVERSION=	3.60.1
 PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
+DISTNAME=	${PORTNAME}-3.60 # XXX Drop after 3.60.1 distfile appears
 
 MAINTAINER=	gecko@FreeBSD.org
 COMMENT=	Libraries to support development of security-enabled applications
