--- a/x11/station-tweak/Makefile
+++ b/x11/station-tweak/Makefile
@@ -3,8 +3,8 @@
 
 
 PORTNAME=	station-tweak
-PORTVERSION=	0.3
-PORTREVISION=	2
+PORTVERSION=	0.7
+PORTREVISION=	0
 CATEGORIES=	x11
 MASTER_SITES=	https://github.com/GhostBSD/${PORTNAME}/archive/
 
@@ -16,15 +16,13 @@ LICENSE=	BSD
 USE_GITHUB=	yes
 GH_ACCOUNT=	GhostBSD
 
-BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}python-distutils-extra>=2.15:devel/py-python-distutils-extra
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}python-distutils-extra>=2.15:devel/py-python-distutils-extra@${PY_FLAVOR}
 
-RUN_DEPENDS=	wmctrl:x11/wmctrl \
-		plank:x11/plank \
-		${PREFIX}/libexec/brisk-menu:x11/brisk-menu
+RUN_DEPENDS=	wmctrl:x11/wmctrl
 
-USES=		python:2.7 gettext-tools
-USE_PYTHON=	distutils
-USE_GNOME=	pygobject3 intltool dconf
-USE_MATE= 	panel
+USES = python:3.6+ gettext-tools
+USE_PYTHON=	distutils noflavors
+USE_GNOME=	pygobject3 intltool
 
 .include <bsd.port.mk>
+
