--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,9 +1,9 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 558452 2020-12-19 13:27:09Z pkubaj $
+# $FreeBSD: head/mail/thunderbird/Makefile 560774 2021-01-08 14:23:34Z cmt $
 
 PORTNAME=	thunderbird
-DISTVERSION=	78.6.0
-PORTREVISION=	2
+DISTVERSION=	78.6.1
+PORTREVISION=	1
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
 		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
