--- a/www/node10/Makefile
+++ b/www/node10/Makefile
@@ -1,9 +1,9 @@
-# $FreeBSD: head/www/node10/Makefile 553940 2020-11-03 00:56:26Z jbeich $
+# $FreeBSD: head/www/node10/Makefile 561594 2021-01-14 21:12:10Z bhughes $
 
 PORTNAME=	node
-PORTVERSION=	10.23.0
+PORTVERSION=	10.23.1
 DISTVERSIONPREFIX=	v
-PORTREVISION=	2
+PORTREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	http://nodejs.org/dist/v${PORTVERSION}/
 PKGNAMESUFFIX=	10
