Update Node, Firefox and Firefox ESR

--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,8 +1,8 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox/Makefile 560546 2021-01-06 18:37:40Z cmt $
+# $FreeBSD: head/www/firefox/Makefile 561980 2021-01-18 22:49:23Z jbeich $
 
 PORTNAME=	firefox
-DISTVERSION=	84.0.2
+DISTVERSION=	85.0
 PORTREVISION=	1
 PORTEPOCH=	2
 CATEGORIES=	www
