Firefox, Thunderbird and Firefox ESR

--- a/www/firefox-esr/Makefile
+++ b/www/firefox-esr/Makefile
@@ -1,9 +1,9 @@
 # Created by: Alan Eldridge <alane@FreeBSD.org>
-# $FreeBSD: head/www/firefox-esr/Makefile 562297 2021-01-22 11:40:03Z jbeich $
+# $FreeBSD: head/www/firefox-esr/Makefile 563866 2021-02-03 03:11:01Z pkubaj $
 
 PORTNAME=	firefox
 DISTVERSION=	78.7.0
-PORTREVISION=	2
+PORTREVISION=	3
 PORTEPOCH=	1
 CATEGORIES=	www
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}esr/source \
