--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,12 +1,12 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 563867 2021-02-03 04:07:02Z pkubaj $
+# $FreeBSD: head/mail/thunderbird/Makefile 564056 2021-02-04 18:23:11Z cmt $
 
 PORTNAME=	thunderbird
-DISTVERSION=	78.7.0
-PORTREVISION=	3
+DISTVERSION=	78.7.1
+PORTREVISION=	1
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build2/source
+		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
 DISTFILES=	${DISTNAME}.source${EXTRACT_SUFX}
 
 MAINTAINER=	gecko@FreeBSD.org
