--- a/mail/thunderbird/Makefile
+++ b/mail/thunderbird/Makefile
@@ -1,9 +1,9 @@
 # Created by: Joe Marcus Clarke <marcus@FreeBSD.org>
-# $FreeBSD: head/mail/thunderbird/Makefile 569067 2021-03-23 22:01:05Z jbeich $
+# $FreeBSD: head/mail/thunderbird/Makefile 569491 2021-03-29 18:10:45Z tobik $
 
 PORTNAME=	thunderbird
 DISTVERSION=	78.9.0
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	mail news net-im
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
 		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build2/source
