Update Firefox, NSS, Node, Thunderbird, CA Root

--- a/security/ca_root_nss/Makefile
+++ b/security/ca_root_nss/Makefile
@@ -37,7 +37,7 @@ SUB_LIST=	VERSION_NSS=${VERSION_NSS}
 
 .include "${.CURDIR}/../../security/ca_root_nss/Makefile.ca"
 
-do-build:	apply-slist
+do-build:
 	@${SETENV} PATH=${LOCALBASE}/bin:$${PATH} \
 		${PERL} ${WRKDIR}/${BUNDLE_PROCESSOR} \
 	    < ${WRKSRC}/${CERTDATA_TXT_PATH} > \
