--- a/www/seamonkey/Makefile
+++ b/www/seamonkey/Makefile
@@ -1,17 +1,16 @@
 # $FreeBSD$
 
 PORTNAME=	seamonkey
-DISTVERSION=	2.53.7.1
-PORTREVISION=	1
-CATEGORIES?=	www mail news editors irc
-MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}-candidates/build1/source
+DISTVERSION=	2.53.8
+PORTREVISION=	2
+CATEGORIES?=	www mail news irc
+MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}/source
 DISTFILES=	${DISTNAME}.source${EXTRACT_SUFX}
 
 MAINTAINER=	code@edv-work.de
 COMMENT=	Webbrowser, e-mail, news and feed client, IRC chat, and HTML editing
 
-USES=		tar:xz compiler:c++17-lang cpe gl gmake iconv localbase pkgconfig
+USES=		tar:xz compiler:c++17-lang cpe gl gmake iconv localbase pkgconfig python:3.6+
 USE_GL=		glu
 USE_GNOME=	cairo gdkpixbuf2 gtk20 gtk30
 USE_XORG=	x11 xcb xcomposite xdamage xext xfixes xrender xt xcursor xi
@@ -21,39 +20,31 @@ BUILD_DEPENDS+=	python27>=2.7.18:lang/python27 \
 		nss>=3.58:security/nss \
 		icu>=67.1,1:devel/icu \
 		libevent>=2.1.8:devel/libevent \
-		harfbuzz>=2.6.8:print/harfbuzz \
 		graphite2>=1.3.14:graphics/graphite2 \
 		png>=1.6.35:graphics/png \
 		libvpx>=1.8.2:multimedia/libvpx \
-		${PYTHON_PKGNAMEPREFIX}sqlite3>0:databases/py27-sqlite3@${PY_FLAVOR} \
+		${PYTHON_PKGNAMEPREFIX}sqlite3>0:databases/py-sqlite3@${PY_FLAVOR} \
 		v4l_compat>0:multimedia/v4l_compat \
 		autoconf-2.13:devel/autoconf213 \
 		nasm:devel/nasm \
 		yasm:devel/yasm \
 		zip:archivers/zip \
-		${RUST_DEFAULT}>=1.43:lang/${RUST_DEFAULT}
-
-MAKEFILE=	client.mk
-ALL_TARGET=	build
-
-.if ${CC} == cc && ${CXX} == c++ && exists(/usr/lib/libc++.so)
-LLVM=		12
-BUILD_DEPENDS+=	${LOCALBASE}/bin/clang${LLVM}:devel/llvm${LLVM}
-CPP=		${LOCALBASE}/bin/clang-cpp${LLVM}
-CC=		${LOCALBASE}/bin/clang${LLVM}
-CXX=		${LOCALBASE}/bin/clang++${LLVM}
-USES:=		${USES:Ncompiler\:*} # XXX avoid warnings
-.endif
+		${RUST_DEFAULT}>=1.43:lang/${RUST_DEFAULT} \
+		${LOCALBASE}/bin/clang${LLVM_DEFAULT}:devel/llvm${LLVM}${LLVM_DEFAULT}
 
 LIB_DEPENDS=	libv4l2.so:multimedia/libv4l \
 		libnspr4.so:devel/nspr \
 		libnssutil3.so:security/nss \
 		libfreetype.so:print/freetype2 \
-		libfontconfig.so:x11-fonts/fontconfig
+		libfontconfig.so:x11-fonts/fontconfig \
+		libharfbuzz.so:print/harfbuzz
 
 MOZCONFIG?=		${WRKSRC}/.mozconfig
-MOZILLA_PLIST_DIRS?=	bin lib share
+MOZ_PLIST_DIRS?=	bin lib share/applications share/pixmaps
 PLISTF?=		${WRKDIR}/plist_files
+
+MOZ_MK_DIR=	freebsd_out
+MOZ_MK_OPTS+=	MOZ_OBJDIR=./${MOZ_MK_DIR}
 
 MOZ_OPTIONS+=	--enable-application=comm/suite
 MOZ_OPTIONS+=	--enable-official-branding
@@ -89,29 +80,12 @@ OPTIONS_DEFAULT=	DBUS HUNSPELL ALSA PULSEAUDIO
 
 DESKTOP_ENTRIES=	"SeaMonkey" \
 			"Internet Application Suite" \
-			"${PREFIX}/share/pixmaps/seamonkey.png" \
-			"seamonkey" \
+			"${PREFIX}/share/pixmaps/${PORTNAME}.png" \
+			"${PORTNAME}" \
 			"Network;GTK;Email;WebBrowser;News;" \
 			true
 
 .include "${.CURDIR}/Makefile.ca"
-
-post-install-script: gecko-create-plist
-
-gecko-create-plist:
-# Create the plist
-	${RM} ${PLISTF}
-.for dir in ${MOZILLA_PLIST_DIRS}
-	@cd ${STAGEDIR}${PREFIX}/${dir} && ${FIND} -H -s * ! -type d | \
-		${SED} -e 's|^|${dir}/|' >> ${PLISTF}
-.endfor
-	${CAT} ${PLISTF} | ${SORT} >> ${TMPPLIST}
-
-
-post-patch: gecko-post-patch
-	@${REINPLACE_CMD} -e '/accessibility.typeaheadfind.enablesound/s/true/false/' \
-		${WRKSRC}/modules/libpref/init/all.js
-
 .include <bsd.port.pre.mk>
 
 .if ${PORT_OPTIONS:MDBUS}
@@ -147,17 +121,34 @@ RUN_DEPENDS+=	pulseaudio:audio/pulseaudio
 MOZ_OPTIONS+=	--disable-pulseaudio
 .endif
 
-gecko-post-patch:
+do-build:
 	@${RM} ${MOZCONFIG}
+.for arg in ${MOZ_MK_OPTS}
+	@${ECHO_CMD} mk_add_options ${arg:Q} >> ${MOZCONFIG}
+.endfor
 .for arg in ${MOZ_OPTIONS}
 	@${ECHO_CMD} ac_add_options ${arg:Q} >> ${MOZCONFIG}
 .endfor
 .for var in ${MOZ_EXPORT}
 	@${ECHO_CMD} export ${var:Q} >> ${MOZCONFIG}
 .endfor
+	${MKDIR} ${WRKSRC}/${MOZ_RESULT}
+	${WRKSRC}/mach build
+
+do-install:
+	${CP} -rL ${WRKSRC}/${MOZ_MK_DIR}/dist/bin ${STAGEDIR}${PREFIX}/lib/${PORTNAME}
+	${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/${PORTNAME}/nsinstall
 
 post-install:
-	${LN} -sf ../../lib/seamonkey/chrome/icons/default/default128.png \
-		${STAGEDIR}${PREFIX}/share/pixmaps/seamonkey.png
+	${LN} -sf ../lib/${PORTNAME}/${PORTNAME} \
+		${STAGEDIR}${PREFIX}/bin/${PORTNAME}
+	${LN} -sf ../../lib/${PORTNAME}/chrome/icons/default/default128.png \
+		${STAGEDIR}${PREFIX}/share/pixmaps/${PORTNAME}.png
+	${RM} ${PLISTF}
+.for dir in ${MOZ_PLIST_DIRS}
+	@cd ${STAGEDIR}${PREFIX}/${dir} && ${FIND} -H -s * ! -type d | \
+		${SED} -e 's|^|${dir}/|' >> ${PLISTF}
+.endfor
+	${CAT} ${PLISTF} | ${SORT} >> ${TMPPLIST}
 
 .include <bsd.port.post.mk>
