--- a/www/node16/Makefile
+++ b/www/node16/Makefile
@@ -1,10 +1,10 @@
 PORTNAME=	node
-PORTVERSION=	10.24.1
 DISTVERSIONPREFIX=	v
-PORTREVISION=	3
+DISTVERSION=	16.13.0
+PORTREVISION=	1
 CATEGORIES=	www
-MASTER_SITES=	http://nodejs.org/dist/v${PORTVERSION}/
-PKGNAMESUFFIX=	10
+MASTER_SITES=	https://nodejs.org/dist/v${DISTVERSION}/
+PKGNAMESUFFIX=	16
 
 MAINTAINER=	bhughes@FreeBSD.org
 COMMENT=	V8 JavaScript for client and server
@@ -12,13 +12,11 @@ COMMENT=	V8 JavaScript for client and server
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-DEPRECATED=		Node.js v10.x reaches end-of-life on 2021-04-30, see https://github.com/nodejs/Release
-EXPIRATION_DATE=	2021-04-30
 BROKEN_SSL=		libressl libressl-devel
-BROKEN_SSL_REASON=	Node.js 10.x LTS requires OpenSSL 1.1.x or the BUNDLED_SSL option enabled
+BROKEN_SSL_REASON=	Node.js 16.x LTS requires OpenSSL 1.1.x or the BUNDLED_SSL option enabled
 ONLY_FOR_ARCHS=		aarch64 amd64 armv6 armv7 i386 powerpc64 powerpc64le
 
-USES=		compiler:c++11-lib gmake python:2.7,build pkgconfig \
+USES=		compiler:c++11-lib gmake python:3.6-3.9,build pkgconfig \
 		localbase shebangfix
 
 OPTIONS_DEFINE=		BUNDLED_SSL DOCS NLS DTRACE
@@ -43,23 +41,27 @@ BUNDLED_SSL_CONFIGURE_OFF=	--shared-openssl --openssl-use-def-ca-store
 BUNDLED_SSL_RUN_DEPENDS_OFF=	ca_root_nss>=0:security/ca_root_nss
 
 NLS_CONFIGURE_ON=	--with-intl=system-icu
-NLS_BUILD_DEPENDS=	icu>=64.2:devel/icu
+NLS_BUILD_DEPENDS=	icu>=69.1:devel/icu
 NLS_LIB_DEPENDS=	libicui18n.so:devel/icu
 
 DTRACE_CONFIGURE_ON=	--with-dtrace
 
 HAS_CONFIGURE=	yes
 
-CONFLICTS_INSTALL=	node14-[0-9]* node16-[0-9]* node-[0-9]*
+CONFLICTS_INSTALL=	node10-[0-9]* node14-[0-9]* node-[0-9]*
 
 CONFIGURE_ARGS=	--prefix=${PREFIX_RELDEST} \
 		--without-npm \
+		--shared-brotli \
 		--shared-cares \
 		--shared-libuv \
 		--shared-nghttp2 \
 		--shared-zlib
 
-SHEBANG_FILES=	tools/specialize_node_d.py tools/genv8constants.py
+SHEBANG_FILES=	deps/v8/tools/*.py \
+		deps/v8/third_party/inspector_protocol/*.py \
+		tools/*.py \
+		tools/inspector_protocol/*.py
 
 PREFIX_RELDEST=	${PREFIX:S,^${DESTDIR},,}
 REINPLACE_ARGS=	-i ''
@@ -67,27 +69,35 @@ MAKE_ENV+=	CC.host=${CC} CFLAGS.host="${CFLAGS}" \
 		CXX.host=${CXX} CXXFLAGS.host="${CXXFLAGS}" \
 		LINK.host=${CXX} LDFLAGS.host="${LDFLAGS}"
 
-BUILD_DEPENDS+=	c-ares>=1.15.0:dns/c-ares\
-		libuv>=1.34.2:devel/libuv \
-		libnghttp2>=1.41.0:www/libnghttp2 \
+BUILD_DEPENDS+=	brotli>=1.0.9,1:archivers/brotli \
+		c-ares>=1.17.2:dns/c-ares \
+		libuv>=1.42.0:devel/libuv \
+		libnghttp2>=1.45.1:www/libnghttp2 \
 		objdump:devel/binutils
-LIB_DEPENDS+=	libcares.so:dns/c-ares\
+LIB_DEPENDS+=	libbrotlidec.so:archivers/brotli \
+		libcares.so:dns/c-ares \
 		libuv.so:devel/libuv \
 		libnghttp2.so:www/libnghttp2
 
 .include <bsd.port.options.mk>
 
-.if ${PORT_OPTIONS:MBUNDLED_SSL} && ${ARCH} != amd64 && ${ARCH} != i386
-CONFIGURE_ARGS+=--openssl-no-asm
-.elif (defined(PPC_ABI) && ${PPC_ABI} == ELFv2) || ${ARCH} == powerpc64le
-EXTRA_PATCHES=	${PATCHDIR}/extra-patch-common.gypi
+.if (defined(PPC_ABI) && ${PPC_ABI} == ELFv2) || ${ARCH} == powerpc64le
+EXTRA_PATCHES=		${PATCHDIR}/extra-patch-common.gypi
 .endif
 
-.include "${.CURDIR}/../../www/node10/Makefile.ca"
+.if ${ARCH} == armv6 || ${ARCH} == armv7
+EXTRA_PATCHES=	${PATCHDIR}/extra-patch-tools_v8__gypfiles_v8.gyp
+.endif
+
+.if ${PORT_OPTIONS:MBUNDLED_SSL} && ${ARCH} != amd64
+CONFIGURE_ARGS+=--openssl-no-asm
+.endif
+
+.include "${.CURDIR}/../../www/node16/Makefile.ca"
 
 post-patch:
 	@${REINPLACE_CMD} -e 's|/usr/local|${LOCALBASE}|' \
-		${WRKSRC}/deps/v8/gypfiles/v8.gyp
+		${WRKSRC}/tools/v8_gypfiles/v8.gyp
 
 post-configure:
 	# Post-process Makefile and *.mk files created by node-gyp and remove
