--- a/security/py-certifi/Makefile.ca
+++ b/security/py-certifi/Makefile.ca
@@ -13,8 +13,14 @@ CERTDATA_PACYWORLD_TXT=	ca-pacyworld_root-der.txt
 post-extract:
 	@${CP} ${DISTDIR}/${CERTDATA_PACYCOMCA_TXT} ${WRKDIR}
 	@${CP} ${DISTDIR}/${CERTDATA_PACYWORLD_TXT} ${WRKDIR}
+	# Add extra line at end of each file
+	@echo "" >> ${WRKSRC}/${CERTDATA_PACYCOMCA_TXT}
+	@echo "" >> ${WRKSRC}/${CERTDATA_PACYWORLD_TXT}
 	
 merge-pacyworld:
+	# Add extra line at end of the existing file
+	@echo "" >> ${WRKSRC}/${CERTDATA_TXT_PATH}
+	# Append Pacy World CA Certificates
 	@${CAT} ${WRKDIR}/${CERTDATA_PACYCOMCA_TXT} ${WRKDIR}/${CERTDATA_PACYWORLD_TXT} >> ${WRKSRC}/${CERTDATA_TXT_PATH}
 
 pre-build: merge-pacyworld
