--- a/www/firefox-esr/Makefile
+++ b/www/firefox-esr/Makefile
@@ -1,12 +1,10 @@
-# Created by: Alan Eldridge <alane@FreeBSD.org>
-
 PORTNAME=	firefox
-DISTVERSION=	91.11.0
-PORTREVISION=	3
+DISTVERSION=	91.12.0
+PORTREVISION=	1
 PORTEPOCH=	1
-CATEGORIES=	www
+CATEGORIES=	www wayland
 MASTER_SITES=	MOZILLA/${PORTNAME}/releases/${DISTVERSION}esr/source \
-		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}esr-candidates/build2/source
+		MOZILLA/${PORTNAME}/candidates/${DISTVERSION}esr-candidates/build1/source
 PKGNAMESUFFIX=	-esr
 DISTFILES=	${DISTNAME}esr.source${EXTRACT_SUFX}
 
