--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,11 +1,12 @@
 PORTNAME=	nss
-PORTVERSION=	3.81
+PORTVERSION=	3.82
 PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
 
 MAINTAINER=	gecko@FreeBSD.org
 COMMENT=	Libraries to support development of security-enabled applications
+WWW=		https://developer.mozilla.org/docs/Mozilla/Projects/NSS
 
 LICENSE=	MPL20
 LICENSE_FILE=	${WRKSRC}/COPYING
