--- a/www/node16/Makefile
+++ b/www/node16/Makefile
@@ -8,6 +8,7 @@ PKGNAMESUFFIX=	16
 
 MAINTAINER=	bhughes@FreeBSD.org
 COMMENT=	V8 JavaScript for client and server
+WWW=		https://nodejs.org/
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
