--- a/www/node16/Makefile
+++ b/www/node16/Makefile
@@ -1,12 +1,12 @@
 PORTNAME=	node
 DISTVERSIONPREFIX=	v
-DISTVERSION=	16.16.0
+DISTVERSION=	16.18.1
 PORTREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	https://nodejs.org/dist/v${DISTVERSION}/
 PKGNAMESUFFIX=	16
 
-MAINTAINER=	bhughes@FreeBSD.org
+MAINTAINER=	otis@FreeBSD.org
 COMMENT=	V8 JavaScript for client and server
 WWW=		https://nodejs.org/
 
@@ -22,7 +22,6 @@ USES=		compiler:c++11-lib gmake python:3.6-3.10,build pkgconfig \
 
 OPTIONS_DEFINE=		BUNDLED_SSL DOCS NLS DTRACE COREPACK
 OPTIONS_DEFAULT=	DTRACE COREPACK
-OPTIONS_DEFAULT+=	${OPTIONS_DEFAULT_${OPSYS}_${OSREL:R}}
 OPTIONS_SUB=		yes
 
 .if !exists(/usr/sbin/dtrace)
@@ -115,5 +114,9 @@ post-configure:
 
 post-install:
 	${STRIP_CMD} ${STAGEDIR}${PREFIX}/bin/node
+
+post-install-DTRACE-on:
+	${MKDIR} ${STAGEDIR}${PREFIX}/lib/dtrace
+	${INSTALL_DATA} ${WRKSRC}/out/Release/node.d ${STAGEDIR}${PREFIX}/lib/dtrace
 
 .include <bsd.port.mk>
