Update from upstream

--- a/security/py-certifi/Makefile
+++ b/security/py-certifi/Makefile
@@ -2,7 +2,7 @@ PORTNAME=	certifi
 PORTVERSION=	2022.9.24
 PORTREVISION=	1
 CATEGORIES=	security python
-MASTER_SITES=	CHEESESHOP
+MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	sunpoet@FreeBSD.org
