--- a/www/node16/Makefile
+++ b/www/node16/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	node
 DISTVERSIONPREFIX=	v
-DISTVERSION=	16.20.0
-PORTREVISION=	2
+DISTVERSION=	16.20.1
+PORTREVISION?=	1
 CATEGORIES=	www
 MASTER_SITES=	https://nodejs.org/dist/v${DISTVERSION}/
 PKGNAMESUFFIX=	16
