--- a/security/nss/Makefile
+++ b/security/nss/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	nss
 PORTREVISION=	1
-PORTVERSION=	3.98
+PORTVERSION=	3.99
 CATEGORIES=	security
 MASTER_SITES=	MOZILLA/security/${PORTNAME}/releases/${DISTNAME:tu:C/[-.]/_/g}_RTM/src
 
@@ -51,6 +51,8 @@ OPTIONS_DEFINE_powerpc64=	VSX
 
 VSX_CFLAGS=	-DUSE_PPC_CRYPTO
 VSX_DESC=	Use VSX optimized routines (POWER8 or newer)
+
+TESTING_UNSAFE=	Fatal DOMSUF env. variable is not defined
 
 .include <bsd.port.options.mk>
 
